--- a/BicycleTelemetry/app/src/main/res/layout/activity_main.xml
+++ b/BicycleTelemetry/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,14 @@
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/etServerAddress"/>
+    <Button
+            android:text="@string/reset_straight"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/btResetStraight" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/btConnect"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -33,7 +41,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/btConnect" />
+            app:layout_constraintTop_toBottomOf="@+id/btResetStraight" />
     <TextView
             android:text="@string/steering_angle_title"
             android:layout_width="wrap_content"
@@ -44,7 +52,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/btConnect"/>
+            app:layout_constraintTop_toBottomOf="@+id/btResetStraight"/>
     <TextView
             android:text="@string/connection_status_not_connected"
             android:layout_width="wrap_content"
