--- a/BicycleTelemetry/app/src/main/res/layout/activity_main.xml
+++ b/BicycleTelemetry/app/src/main/res/layout/activity_main.xml
@@ -30,9 +30,10 @@
             android:id="@+id/etServerAddress"
             android:inputType="text|textEmailAddress" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp" android:hint="@string/server_address" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:importantForAutofill="no" />
+            app:layout_constraintTop_toTopOf="parent" android:importantForAutofill="no"
+            android:text="@string/server_address_default"/>
     <TextView
             android:text="0.0°"
             android:layout_width="wrap_content"
