--- a/BicycleTelemetry/app/src/main/res/layout/activity_main.xml
+++ b/BicycleTelemetry/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:id="@+id/btResetStraight" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/btConnect"/>
+            app:layout_constraintTop_toBottomOf="@+id/cbInvertRotation"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -62,4 +62,15 @@
             app:layout_constraintTop_toBottomOf="@+id/tvSteeringAngleTitle"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"/>
+
+    <CheckBox
+        android:id="@+id/cbInvertRotation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+        android:text="@string/cbInvertRotation"
+        app:layout_constraintBottom_toTopOf="@+id/btResetStraight"
+        app:layout_constraintTop_toBottomOf="@+id/btConnect" />
 </android.support.constraint.ConstraintLayout>
