--- a/BicycleTelemetry/app/src/main/res/layout/activity_main.xml
+++ b/BicycleTelemetry/app/src/main/res/layout/activity_main.xml
@@ -8,69 +8,85 @@
         tools:context=".MainActivity">
 
     <Button
-            android:text="@string/connect"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/btConnect" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/etServerAddress"/>
+        android:text="@string/connect"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/btConnect"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/etServerAddress"/>
     <Button
-            android:text="@string/reset_straight"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/btResetStraight" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/cbInvertRotation"/>
+        android:text="@string/reset_straight"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/btResetStraight"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/btConnect"/>
     <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:id="@+id/etServerAddress"
-            android:inputType="text|textEmailAddress" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp" android:hint="@string/server_address" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:importantForAutofill="no"
-            android:text="@string/server_address_default"/>
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:id="@+id/etServerAddress"
+        android:inputType="text|textEmailAddress"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:hint="@string/server_address"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no"
+        android:text="@string/server_address_default"/>
     <TextView
-            android:text="0.0°"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvCurrentSteeringAngle" app:layout_constraintStart_toEndOf="@id/tvSteeringAngleTitle"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/btResetStraight" />
+        android:text="0.0°"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvCurrentSteeringAngle"
+        app:layout_constraintStart_toEndOf="@id/tvSteeringAngleTitle"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/cbInvertRotation" />
     <TextView
-            android:text="@string/steering_angle_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvSteeringAngleTitle" app:layout_constraintEnd_toStartOf="@+id/tvCurrentSteeringAngle"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/btResetStraight"/>
+        android:text="@string/steering_angle_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvSteeringAngleTitle"
+        app:layout_constraintEnd_toStartOf="@+id/tvCurrentSteeringAngle"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/cbInvertRotation"/>
     <TextView
-            android:text="@string/connection_status_not_connected"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvConnectionStatus" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvSteeringAngleTitle"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"/>
+        android:text="@string/connection_status_not_connected"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvConnectionStatus" android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvSteeringAngleTitle"
+        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"/>
 
     <CheckBox
         android:id="@+id/cbInvertRotation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/cbInvertRotation"
-        app:layout_constraintBottom_toTopOf="@+id/btResetStraight"
-        app:layout_constraintTop_toBottomOf="@+id/btConnect" />
+        app:layout_constraintTop_toBottomOf="@+id/btResetStraight" />
 </android.support.constraint.ConstraintLayout>
