--- a/BicycleTelemetry/app/src/main/res/layout/activity_main.xml
+++ b/BicycleTelemetry/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="match_parent"
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context=".MainActivity">
@@ -81,24 +80,60 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"/>
 
+        <TextView
+            android:text="@string/tvLowPassOffsetLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvLowPassOffsetLabel" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvConnectionStatus"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
+
         <CheckBox
             android:id="@+id/cbInvertRotation"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:text="@string/cbInvertRotation"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btResetStraight" />
+
+        <SeekBar
+            android:id="@+id/sbLowPassCutoff"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_weight="1"
+            android:max="100"
+            android:progress="0"
+            app:layout_constraintBottom_toBottomOf="@+id/etLowPassCutoff"
+            app:layout_constraintEnd_toStartOf="@+id/etLowPassCutoff"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvLowPassOffsetLabel" />
+
 
         <org.ccs_labs.bicycletelemetry.SteeringAngleVisualizationView
             android:id="@+id/steeringAngleVisualization"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvConnectionStatus" />
+            app:layout_constraintTop_toBottomOf="@+id/sbLowPassCutoff" />
+
+        <EditText
+            android:id="@+id/etLowPassCutoff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:ems="4"
+            android:importantForAutofill="no"
+            android:inputType="numberDecimal"
+            android:text="1.5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvLowPassOffsetLabel"
+            tools:ignore="LabelFor" />
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
