--- a/BicycleTelemetry/app/src/main/res/menu/main_activity_menu.xml
+++ b/BicycleTelemetry/app/src/main/res/menu/main_activity_menu.xml
@@ -5,4 +5,9 @@
         app:showAsAction="never"
         android:title="@string/set_default_server">
     </item>
+    <item
+        android:id="@+id/action_default_low_pass_cutoff"
+        app:showAsAction="never"
+        android:title="@string/set_default_low_pass_cutoff">
+    </item>
 </menu>
