--- a/BicycleTelemetry/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/BicycleTelemetry/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,63 +1,65 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="108dp"
-        android:height="108dp"
-        android:viewportWidth="227.50882"
-        android:viewportHeight="227.50883">
-    <group android:translateX="46.021076"
-            android:translateY="50.234207">
-      <path
-          android:pathData="M62.591,15.389L70.994,11.206A1.841,1.841 108.538,0 1,73.463 12.034L121.438,108.416A1.841,1.841 108.538,0 1,120.61 110.885L112.207,115.068A1.841,1.841 108.538,0 1,109.738 114.24L61.763,17.858A1.841,1.841 108.538,0 1,62.591 15.389z"
-          android:strokeAlpha="1"
-          android:strokeLineJoin="round"
-          android:strokeWidth="2.94624162"
-          android:fillColor="#6e6e6e"
-          android:strokeColor="#00000000"
-          android:fillAlpha="1"
-          android:strokeLineCap="round"/>
-      <path
-          android:pathData="M61.192,14.821L71.336,9.771A1.841,1.841 108.538,0 1,73.805 10.599L81.942,26.945A1.841,1.841 108.538,0 1,81.114 29.414L70.969,34.463A1.841,1.841 108.537,0 1,68.5 33.635L60.364,17.29A1.841,1.841 108.538,0 1,61.192 14.821z"
-          android:strokeAlpha="1"
-          android:strokeLineJoin="round"
-          android:strokeWidth="2.94624162"
-          android:fillColor="#1b1b1b"
-          android:strokeColor="#00000000"
-          android:fillAlpha="1"
-          android:strokeLineCap="round"/>
-      <path
-          android:pathData="M11.451,68.097L76.925,68.044A1.323,1.323 134.954,0 1,78.249 69.366L78.257,79.123A1.323,1.323 134.954,0 1,76.935 80.447L11.461,80.499A1.323,1.323 134.954,0 1,10.137 79.177L10.13,69.421A1.323,1.323 134.954,0 1,11.451 68.097z"
-          android:strokeAlpha="1"
-          android:strokeLineJoin="round"
-          android:strokeWidth="2.11666656"
-          android:fillColor="#00094b"
-          android:strokeColor="#00000000"
-          android:fillAlpha="1"
-          android:strokeLineCap="round"/>
-      <path
-          android:pathData="M69.075,68.471L96.857,54.523A1.621,1.621 108.343,0 1,99.033 55.245L104.678,66.488A1.621,1.621 108.343,0 1,103.956 68.664L76.174,82.612A1.621,1.621 108.343,0 1,73.998 81.89L68.353,70.646A1.621,1.621 108.343,0 1,69.075 68.471z"
-          android:strokeAlpha="1"
-          android:strokeLineJoin="round"
-          android:strokeWidth="2.59361553"
-          android:fillColor="#959595"
-          android:strokeColor="#00000000"
-          android:fillAlpha="1"
-          android:strokeLineCap="round"/>
-      <path
-          android:pathData="M104.377,100.767L114.521,95.717A1.841,1.841 108.538,0 1,116.99 96.545L125.127,112.891A1.841,1.841 108.538,0 1,124.299 115.36L114.154,120.409A1.841,1.841 108.538,0 1,111.685 119.582L103.549,103.236A1.841,1.841 108.538,0 1,104.377 100.767z"
-          android:strokeAlpha="1"
-          android:strokeLineJoin="round"
-          android:strokeWidth="2.94624162"
-          android:fillColor="#1b1b1b"
-          android:strokeColor="#00000000"
-          android:fillAlpha="1"
-          android:strokeLineCap="round"/>
-      <path
-          android:pathData="M77.58,73.384m-5.953,0a5.953,5.953 0,1 1,11.906 0a5.953,5.953 0,1 1,-11.906 0"
-          android:strokeAlpha="1"
-          android:strokeLineJoin="round"
-          android:strokeWidth="2.11666656"
-          android:fillColor="#6b6b6b"
-          android:strokeColor="#00000000"
-          android:fillAlpha="1"
-          android:strokeLineCap="round"/>
-    </group>
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="108"
+    android:viewportHeight="108">
+  <group android:scaleX="0.44113088"
+      android:scaleY="0.44113088"
+      android:translateX="23.843334"
+      android:translateY="24.673334">
+    <path
+        android:pathData="M128.92,39.61L128.92,39.61A4.16,4.16 106.66,0 1,127.24 45.25L36.93,93.96A4.16,4.16 106.66,0 1,31.29 92.27L31.29,92.27A4.16,4.16 106.66,0 1,32.98 86.63L123.28,37.92A4.16,4.16 106.66,0 1,128.92 39.61z"
+        android:strokeWidth="0.765"
+        android:fillColor="#000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M80,67.59L84.99,65.51A1.84,1.84 112.36,0 1,87.4 66.5L106.6,112.53A1.84,1.84 112.36,0 1,105.61 114.94L100.61,117.02A1.84,1.84 112.36,0 1,98.21 116.03L79.01,70A1.84,1.84 112.36,0 1,80 67.59z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.94624"
+        android:fillColor="#6e6e6e"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M7.92,67.52L62.12,67.48A1.32,1.32 134.95,0 1,63.44 68.8L63.45,80.56A1.32,1.32 134.95,0 1,62.13 81.89L7.93,81.93A1.32,1.32 134.95,0 1,6.6 80.61L6.59,68.84A1.32,1.32 134.95,0 1,7.92 67.52z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.12"
+        android:fillColor="#00094b"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M50.59,19.52L55.18,16.65A1.84,1.84 103.06,0 1,57.71 17.24L84.1,59.56A1.84,1.84 103.06,0 1,83.51 62.1L78.92,64.96A1.84,1.84 103.06,0 1,76.38 64.37L50,22.05A1.84,1.84 103.06,0 1,50.59 19.52z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.94624"
+        android:fillColor="#6e6e6e"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M54.27,69.91L82.05,55.96A1.62,1.62 108.34,0 1,84.23 56.69L89.87,67.93A1.62,1.62 108.34,0 1,89.15 70.11L61.37,84.05A1.62,1.62 108.34,0 1,59.19 83.33L53.55,72.09A1.62,1.62 108.34,0 1,54.27 69.91z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.59"
+        android:fillColor="#959595"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M89.73,94.74L97.43,91.53A1.84,1.84 112.36,0 1,99.84 92.52L109.22,115.02A1.84,1.84 112.36,0 1,108.23 117.43L100.53,120.63A1.84,1.84 112.36,0 1,98.13 119.64L88.74,97.15A1.84,1.84 112.36,0 1,89.73 94.74z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.94624"
+        android:fillColor="#1b1b1b"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M62.77,74.83m-5.95,0a5.95,5.95 0,1 1,11.91 0a5.95,5.95 0,1 1,-11.91 0"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.11667"
+        android:fillColor="#6b6b6b"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M46.98,16.3L53.64,12.14A1.84,1.84 103.06,0 1,56.18 12.73L68.76,32.9A1.84,1.84 103.06,0 1,68.17 35.44L61.5,39.6A1.84,1.84 103.06,0 1,58.97 39.01L46.39,18.83A1.84,1.84 103.06,0 1,46.98 16.3z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.94624"
+        android:fillColor="#1b1b1b"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="round"/>
+  </group>
 </vector>
