--- a/BicycleTelemetry/app/src/main/res/layout/activity_main.xml
+++ b/BicycleTelemetry/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context=".MainActivity">
@@ -55,89 +55,37 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:text="@string/current_steering_angle_initial"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintStart_toEndOf="@id/tvSteeringAngleTitle"
-            app:layout_constraintTop_toBottomOf="@+id/etLowPassCutoff" />
+            app:layout_constraintTop_toBottomOf="@+id/cbInvertRotation" />
 
         <TextView
             android:id="@+id/tvSteeringAngleTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:textColor="@color/lightText"
+            android:layout_marginTop="16dp"
             android:text="@string/steering_angle_title"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/lightText"
             app:layout_constraintEnd_toStartOf="@+id/tvCurrentSteeringAngle"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etLowPassCutoff" />
-
-        <TextView
-            android:id="@+id/tvLowPassOffsetLabel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="@string/tvLowPassOffsetLabel"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cbGyro" />
-
-        <CheckBox
-            android:id="@+id/cbTransmitDebug"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="@string/cbTransmitDebug"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btResetStraight" />
+            app:layout_constraintTop_toBottomOf="@+id/cbInvertRotation" />
 
         <CheckBox
             android:id="@+id/cbInvertRotation"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
             android:text="@string/cbInvertRotation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cbTransmitDebug" />
-
-        <CheckBox
-            android:id="@+id/cbGyro"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:checked="true"
-            android:text="@string/cbGyro"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cbInvertRotation" />
-
-        <SeekBar
-            android:id="@+id/sbLowPassCutoff"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_weight="1"
-            android:max="100"
-            android:progress="0"
-            app:layout_constraintBottom_toBottomOf="@+id/etLowPassCutoff"
-            app:layout_constraintEnd_toStartOf="@+id/etLowPassCutoff"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvLowPassOffsetLabel" />
+            app:layout_constraintTop_toBottomOf="@+id/btResetStraight" />
 
 
         <!--<org.ccs_labs.bicycletelemetry.SteeringAngleVisualizationView
@@ -146,19 +94,6 @@
             android:layout_height="300dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/etLowPassCutoff" />-->
-
-        <EditText
-            android:id="@+id/etLowPassCutoff"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:ems="4"
-            android:importantForAutofill="no"
-            android:inputType="numberDecimal"
-            android:text="1.5"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvLowPassOffsetLabel"
-            tools:ignore="LabelFor" />
 
         <TextView
             android:id="@+id/tvConnectionStatus"
@@ -170,5 +105,5 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvSteeringAngleTitle" />
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
